--- a/qbe.cabal
+++ b/qbe.cabal
@@ -21,6 +21,8 @@ build-type:         Simple
 extra-doc-files:    CHANGELOG.md
 extra-source-files: golden/*.qbe
 tested-with:
+    , GHC == 8.10.7
+    , GHC == 9.0.2
     , GHC == 9.2.2
 
 source-repository head
@@ -45,13 +47,16 @@ library
                       GeneralizedNewtypeDeriving
                       FlexibleInstances
                       OverloadedStrings
-    build-depends:    base ^>=4.16.1.0
-                    , text
-                    , text-short
-                    , bytestring
-                    , hashable
-                    , deepseq
-                    , prettyprinter
+    build-depends:    base              ^>= 4.16.1.0
+                                     || ^>= 4.14
+                                     || ^>= 4.15
+                    , text              ^>= 1.2.5
+                                     || ^>= 2.0
+                    , text-short        ^>= 0.1
+                    , bytestring        ^>= 0.11.3
+                    , hashable          ^>= 1.4.0
+                    , deepseq           ^>= 1.4.4
+                    , prettyprinter     ^>= 1.7.1
     hs-source-dirs:   src
 
 test-suite golden
@@ -61,10 +66,10 @@ test-suite golden
     main-is:          Main.hs
     build-depends:    base
                     , qbe
-                    , filepath
-                    , tasty
-                    , tasty-silver
                     , prettyprinter
+                    , filepath          ^>= 1.4.2.2
+                    , tasty             ^>= 1.4.2.3
+                    , tasty-silver      ^>= 3.3.1.1
     other-extensions: TypeApplications
                       OverloadedStrings
                       DataKinds
