--- a/qbe.cabal
+++ b/qbe.cabal
@@ -47,6 +47,7 @@ library
                       GeneralizedNewtypeDeriving
                       FlexibleInstances
                       OverloadedStrings
+                      PatternSynonyms
     build-depends:    base              ^>= 4.16.1.0
                                      || ^>= 4.14
                                      || ^>= 4.15
